--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ logging.level.de.kartax=debug
 vaadin.launch-browser=false
 spring.application.name=aws-launcher
 
-aws.accessKeyId=${AWS_ACCESS_KEY_ID}
-aws.secretAccessKey=${AWS_SECRET_ACCESS_KEY}
-aws.region=${AWS_REGION}
+aws.accessKeyId=${AWS_ACCESS_KEY_ID:aws-access-key-id}
+aws.secretAccessKey=${AWS_SECRET_ACCESS_KEY:aws-secret-access-key}
+aws.region=${AWS_REGION:eu-central-1}
