--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -25,16 +25,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.TOKEN_READ_PUSH_PACKAGES }}
-
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v6.9.0
         with:
+          github-token: '${{ secrets.TOKEN_READ_PUSH_PACKAGES }}'
           context: .
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/aws-launcher:latest
