--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -22,12 +22,14 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6.9.0
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
         with:
-          context: .
-          push: true
-          tags: ghcr.io/kartax/aws-launcher:latest
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and Push Docker image
+        run: |
+          docker build -t ghcr.io/${{ github.repository }}:latest .
+          docker push ghcr.io/${{ github.repository }}:latest
