--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -31,5 +31,6 @@ jobs:
 
       - name: Build and Push Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}:latest .
-          docker push ghcr.io/${{ github.repository }}:latest
+          IMAGE_NAME="ghcr.io/${{ github.repository }}" 
+          docker build -t "${IMAGE_NAME,,}:latest" .
+          docker push "${IMAGE_NAME,,}:latest"
