--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -24,7 +24,7 @@ jobs:
           java-version: '17'
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build -Pvaadin.productionMode
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
