--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -36,5 +36,5 @@ jobs:
       - name: Build and Push Docker image
         run: |
           IMAGE_NAME="ghcr.io/${{ github.repository }}" 
-          docker build -t "${IMAGE_NAME,,}:latest" .
+          docker build --build-arg BUILD_TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%SZ") -t "${IMAGE_NAME,,}:latest" .
           docker push "${IMAGE_NAME,,}:latest"
