--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation(platform("software.amazon.awssdk:bom:2.29.0"))
     implementation("software.amazon.awssdk:ec2")
     implementation("software.amazon.awssdk:sfn")
+    implementation 'software.amazon.awssdk:costexplorer'
 
     compileOnly 'org.projectlombok:lombok'
 
