--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation(platform("software.amazon.awssdk:bom:2.29.0"))
     implementation("software.amazon.awssdk:ec2")
     implementation("software.amazon.awssdk:sfn")
-    implementation 'software.amazon.awssdk:costexplorer'
+    implementation 'software.amazon.awssdk:cloudwatch'
 
     compileOnly 'org.projectlombok:lombok'
 
