--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.application.name=aws-launcher
 aws.accessKeyId=${AWS_ACCESS_KEY_ID:aws-access-key-id}
 aws.secretAccessKey=${AWS_SECRET_ACCESS_KEY:aws-secret-access-key}
 aws.region=${AWS_REGION:eu-central-1}
+aws.budgetAccountId=${AWS_BUDGET_ACCOUNT_ID:12345678}
+aws.budgetName=${AWS_BUDGET_NAME:max monthly}
